donation form added

--- a/main/index.html
+++ b/main/index.html
@@ -44,7 +44,7 @@
                     <p>В реабилитационном центре находится более 50 диких животных и хищных птиц</p>
                 </div>
                 <div class="about__animals__block healing animate__animated animate__slideInRight">
-                    <h3>Лечение и реаблитация</h3>
+                    <h3>Лечение&nbsp;и реаблитация</h3>
                     <p>В Центре осуществляется содержание, реабилитация, лечение, карантинирование, выпуск в природу животных и птиц</p>
                 </div>
             </div>
@@ -160,14 +160,14 @@
                                 <div id="emailHelp" class="form-text">Данные защищены.</div>
                             </div>
                             <div class="mb-6 pb-3">
-                                <label for="inputSumm" class="form-label">Сумма пожертвования (руб)</label>
-                                <input type="number" class="form-control" id="inputSumm" required>
+                                <label for="inputComm" class="form-label">Комментарий</label>
+                                <input type="text" class="form-control" id="inputComm" required>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                        <button type="button" class="btn btn-primary text-white" id="submitBtn">Перейти к оплате</button>
+                        <iframe src="https://yoomoney.ru/quickpay/fundraise/button?billNumber=165NVTSLP8H.241028&" id="donation-submit" width="330" height="50" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
                     </div>
                     </div>
                   </div>
